@@ -94,7 +94,7 @@ ListImageHeight=150
 
 Language=en_GB
 Generator=qdom
-PageCaching=enabled
+PageCaching=disabled
 CapitalizeHeadlines=disabled
 UserComments=enabled
 DefaultLinkText=Read more
